css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.task-list-item::before {
  @apply hidden;
}

.task-list-item {
  @apply list-none;
}

.footnotes {
  @apply pt-8 mt-12 border-t border-gray-200 dark:border-gray-700;
}

.csl-entry {
  @apply my-5;
}

/* https://stackoverflow.com/questions/61083813/how-to-avoid-internal-autofill-selected-style-to-be-applied */
input:-webkit-autofill,
input:-webkit-autofill:focus {
  transition: background-color 600000s 0s, color 600000s 0s;
}

.backdrop {
  backdrop-filter: blur(6px);
}

.top-n-1 {
  top: -5px;
}

header.isSticky .title {
  opacity: 0;
  transition: .5s;
}

.leftNav {
  opacity: 0;
}

.leftNav.isSticky {
  opacity: 1;
  transition: 0.5s;
}

@media (min-width: 1280px) {
  .table-of-contents {
    padding: 1.5rem 2.5rem;
    position: fixed;
    top: 300px;
    left: 7.5rem;
    width: 275px;
  }
}

@media (max-width: 1279px) {
  .table-of-contents {
    display: none;
  }
}

.post-img {
  max-width: 500px;
  margin: auto;
}

